@@ -20,7 +20,7 @@
       <dependency>
          <groupId>org.testng</groupId>
          <artifactId>testng</artifactId>         
-         <version>6.3.1</version>
+         <version>6.4</version>
          <scope>compile</scope>
       </dependency>
       <dependency>
